--- a/Page.html
+++ b/Page.html
@@ -18,13 +18,12 @@
 	<p>
 		Each lane will constantly create minions to seige down the lane, which the players cannot control. The players' champions fight with eachother in their respective lanes, and kill eachother for gold. However, a reliable source of gold is killing minions. Players can kill the minions and gain gold and experience to buy items and gain or empower their existing skills. Each lane has three turrets (which players can demolish for gold,) guarding the inhibitors, (which when destroyed, allow for the minions in the lane to become empowered,) which opens a path to the base to destroy the last two turrets and the nexus, which will win the game.
 	</p>
-	<p>
-	
-	</p>
-	<h4>Roles</h4>
+<br>
+	<h3>Roles</h3>
 	<p>
 		Each team (typically) has 5 roles that players choose to play, each champion offering a unique playstyle to suit a specific <a href="http://leagueoflegends.wikia.com/wiki/Champion/Champion_Attributes#Classes">role.</a>
 	</p>
+	<br>
 	<h3>Top Laner</h3>
 	<p> 
      Top laners typically play a "Tank" champion that can soak up damage done by other players, in order to protect their team. Tanks buy items that provide health, armor, and magic resistance, but each game is different, so proper itemization is very important. <a href="http://leagueoflegends.wikia.com/wiki/Champion_statistic#Defensive"> Some tank stats are listed here, on the League of Legends wiki.</a> In some cases however, top laners can be high damage "Bruisers" who can still take damage, but prioritize taking out the enemy damage dealers, known as "Carries."
@@ -41,6 +40,7 @@
 		<li><a href="http://www.lolking.net/champions/fiora">Fiora,</a> "The Grand Duelist"</li>
 		<li><a href="http://www.lolking.net/champions/jayce">Jayce,</a> "The Defender of Tomorrow"</li>
 	</ul>
+	<br>
 	<h3>Mid Laner</h3>
 	<p>
      Mid laners have a ranged spell based arsenal, primarily dealing magic damage, and typically buy ability power items. They tend to focus their damage on carries or other mid laners in order to start or end a "teamfight" (a situation where all 10 players are fighting.) Mid laners can provide either damage or "utility" for their team, some more than others, in order to draw focus to an enemy so the rest of the team can kill them. <a href="http://leagueoflegends.wikia.com/wiki/Champion_statistic#Ability">Some ability statistics are listed here.</a>
@@ -58,6 +58,7 @@
 		<li><a href="http://www.lolking.net/champions/cassiopeia">Cassiopeia,</a> "The Serpent's Embrace"</li>
 		<li><a href="http://www.lolking.net/champions/viktor">Viktor,</a> "The Machine Herald"</li>
 	</ul>
+	<br>
 	<h3>Attack-Damage-Carry</h3>
 	<p>
      The Attack-damage-carry, or "ADC," is a champion that can deal high amounts of damage by using their basic attacks. They can be very mobile, or they can stand still, however, they should deal enough damage in a fight to burst down any enemy. They typicaly buy items that allow them to critically strike, dealing double damage (or in some cases, multiplying their damage by 2.5,) and armor penetrating items that allow them to still do significant damage to tanks. <a href="http://leagueoflegends.wikia.com/wiki/Champion_statistic#Offensive">Some offensive statistics are listed here.</a>
@@ -69,6 +70,7 @@
 		<li><a href="http://www.lolking.net/champions/lucian">Lucian,</a> "The Purifier"</li>
 		<li><a href="http://www.lolking.net/champions/kogmaw">Kog'Maw,</a> "The Mouth of the Abyss"</li>
 	</ul>
+	<br>
 	<h3>Support</h3>
 	<p>
      The support role is one of the least desireable roles, simply because of how boring some may find it. The support goes in lane with the adc, and they offer their utility in order to help them get kills, or prevent them from getting killed. They can be tanky, as well as provide "buffs." Supports provide buffs, which increase the statistics of the adc, while de-buffs, or "crowd control," which can stun, root, slow, or silence an enemy. <a href="http://leagueoflegends.wikia.com/wiki/Crowd_control">A list of crowd control in League of Legends is listed here.</a>
@@ -76,16 +78,27 @@
 	<p>Popular supports are:</p>
 	<ul>
 		<li><a href="http://leagueoflegends.wikia.com/wiki/Crowd_control">Zyra,</a> "The Rise of the Thorns"</li>
-		<li><a href="http://www.lolking.net/champions/thresh">Thresh,</a> "The Chain Warden"</li>
+		<li><a href="http://www.lolking.net/champions/karma">Karma,</a> "The Enlightened One"</li>
 		<li><a href="http://www.lolking.net/champions/taric">Taric,</a> "The Gem Knight"</li>
 		<li><a href="http://www.lolking.net/champions/nami">Nami,</a> "The Tidecaller"</li>
 	</ul>
+<br>
 	<h2>Jungler</h2>
 	<p>
      The jungler's role is to "gank" lanes. Ganking is a term for arriving to a lane by suprise and killing the enemy laner, by showing up in a fight and overpowering the enemy with numbers. Ganking is not exclusively for junglers, as anyone can leave lane to go to another lane and assist. Mid laners and supports can roam to bottom lane and top lane, while top laners can only roam to mid lane. (Supports and ADC's can also roam to mid lane, but typically do not, because the ADC needs to farm minions.)
 	</p>
-	<p>
-	
-	</p>
+	<p>Some tanky junglers are:</p>
+	<ul>
+		<li><a href"">Zac,</a></li>
+		<li><a href"">Skarner,</a></li>
+		<li><a href"">Sejuani,</a></li>
+	</ul>
+	<p>Some carry junglers are:</p>
+	<ul>
+		<li><a href"">Graves,</a></li>
+		<li><a href"">Nidalee,</a></li>
+		<li><a href"">Lee Sin,</a></li>
+	</ul>
+	<p>Playing jungle for a team is </p>
 	</body>
 </html>
