--- a/Page.html
+++ b/Page.html
@@ -99,6 +99,6 @@
 		<li><a href"">Nidalee,</a></li>
 		<li><a href"">Lee Sin,</a></li>
 	</ul>
-	<p>Playing jungle for a team is </p>
+	<p>Playing jungle for a team is vital in order to get laners fed, so that they can win lanes and get an advantage in the team. </p>
 	</body>
 </html>
