--- a/Page.html
+++ b/Page.html
@@ -77,7 +77,7 @@
 	</p>
 	<p>Popular supports are:</p>
 	<ul>
-		<li><a href="http://leagueoflegends.wikia.com/wiki/Crowd_control">Zyra,</a> "The Rise of the Thorns"</li>
+		<li><a href="http://www.lolking.net/champions/zyra">Zyra,</a> "The Rise of the Thorns"</li>
 		<li><a href="http://www.lolking.net/champions/karma">Karma,</a> "The Enlightened One"</li>
 		<li><a href="http://www.lolking.net/champions/taric">Taric,</a> "The Gem Knight"</li>
 		<li><a href="http://www.lolking.net/champions/nami">Nami,</a> "The Tidecaller"</li>
@@ -89,15 +89,15 @@
 	</p>
 	<p>Some tanky junglers are:</p>
 	<ul>
-		<li><a href"">Zac,</a></li>
-		<li><a href"">Skarner,</a></li>
-		<li><a href"">Sejuani,</a></li>
+		<li><a href="http://www.lolking.net/champions/zac">Zac,</a></li>
+		<li><a href="http://www.lolking.net/champions/skarner">Skarner,</a></li>
+		<li><a href="http://www.lolking.net/champions/sejuani">Sejuani,</a></li>
 	</ul>
 	<p>Some carry junglers are:</p>
 	<ul>
-		<li><a href"">Graves,</a></li>
-		<li><a href"">Nidalee,</a></li>
-		<li><a href"">Lee Sin,</a></li>
+		<li><a href="http://www.lolking.net/champions/graves">Graves,</a></li>
+		<li><a href="http://www.lolking.net/champions/nidalee">Nidalee,</a></li>
+		<li><a href="http://www.lolking.net/champions/lee_sin">Lee Sin,</a></li>
 	</ul>
 	<p>Playing jungle for a team is vital in order to get laners fed, so that they can win lanes and get an advantage in the team. </p>
 	</body>
